# sclogging

./: .deepsource.toml  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CopyrightManager.xml  CopyrightManagerSettings.xml  LICENSE  README.md  SECURITY.md  environment.yml  get-pip.py  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bandit.yml  codeql-analysis.yml  codeql.yml  coveralls.yml  main.yml  ossar.yml  python-app.yml  python-package-conda.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  readme.rst
pyinputplus/: meta.yaml
pysimplevalidate/: meta.yaml
src/sclogging/: __init__.py  config.py  custom_logging_with_colorama.py  sclogging_main.py  settings.toml
src/sclogging.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stdiomask/: meta.yaml
tests/: test_custom_logging_with_colorama.py  test_sclogging_main.py
