[build-system]
requires = ["uv_build>=0.9.29"]
build-backend = "uv_build"

[project]
name = "sclogging"
version = "1.2.1"
description = "A Python module (with the help of coloredlogs) to add color to logs."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "dynaconf>=3.2.12",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "PyInputPlus>=0.2.12",
]

[project.urls]
"Homepage" = "https://github.com/sshimek42/sclogging"
"Documentation" = "https://sclogging.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "sclogging.VERSION"}
